--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,114 @@
+* {
+	padding: 0px;
+	margin: 0px;
+}
+
 .game {
 	width: 100%;
 	height: 640px;
-	background-color: #000000;
+	background-color: #41526e;
+}
+
+.game button {
+  position: relative;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+  padding-block: 0.5rem;
+  padding-inline: 1.25rem;
+  background-color: rgb(0 107 179);
+  border-radius: 9999px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffff;
+  gap: 10px;
+  font-weight: bold;
+  border: 3px solid #ffffff4d;
+  outline: none;
+  overflow: hidden;
+  font-size: 15px;
+  left: 45%;
+  top: 20%;
+}
+
+.icon {
+  width: 24px;
+  height: 24px;
+  transition: all 0.3s ease-in-out;
+}
+
+.game button:hover {
+  transform: scale(1.05);
+  border-color: #fff9;
+}
+
+.game button:hover .icon {
+  transform: translate(4px);
+}
+
+.game button:hover::before {
+  animation: shine 1.5s ease-out infinite;
+}
+
+.game button::before {
+  content: "";
+  position: absolute;
+  width: 100px;
+  height: 100%;
+  background-image: linear-gradient(
+	120deg,
+	rgba(255, 255, 255, 0) 30%,
+	rgba(255, 255, 255, 0.8),
+	rgba(255, 255, 255, 0) 70%
+  );
+  top: 0;
+  left: -100px;
+  opacity: 0.6;
+}
+
+@keyframes shine {
+  0% {
+	left: -100px;
+  }
+
+  60% {
+	left: 100%;
+  }
+
+  to {
+	left: 100%;
+  }
+}
+
+
+@font-face {
+	font-family: gemstone;
+	src: url(../asset/Gemstone.ttf);
+}
+
+#black-outline {
+	position: relative;
+	left: 32%;
+	font-family: gemstone;
+	font-size: 64px;
+}
+
+#white-outline {
+	position: relative;
+	left: 32%;
+	top: -62px;
+	font-family: gemstone;
+	font-size: 64px;
+	color: white;
+}
+
+#logo-color {
+	position: relative;
+	left: 32%;
+	top: -126px;
+	font-family: gemstone;
+	font-size: 64px;
+	background: -webkit-linear-gradient(#3a7199, #3a998c);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
